kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: couchdb
  name: couchdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
      - image: docker.io/bitnami/couchdb:3-debian-10
        name: couchdb
        volumeMounts:
          - name: data
            mountPath: //bitnami/couchdb
          - name: config
            mountPath: /opt/bitnami/couchdb/etc/local.d
      volumes:
      - name: config
        configMap:
          name: couchdb
          items:
            - key: custom.ini
              path: custom.ini
      - name: data
        persistentVolumeClaim:
          claimName: couchdb-data
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
spec:
  selector:
    app: couchdb
  ports:
    - name: tcp
      protocol: TCP
      port: 5984
      targetPort: 5984
